2011-10-28  Ryosuke Niwa  <rniwa@webkit.org>

        Unskip tables/mozilla_expected_failures/bugs/bug14007-2.html
        since the test was rebaselined in r98691.

        Also enable platform/mac/editing/deleting/backward-delete.html on Chromium Mac
        and skip it again on Chromium Windows and Linux.

        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2011-10-28  Anna Cavender  <annacc@chromium.org>

        Implement load notification and events for <track>.
        https://bugs.webkit.org/show_bug.cgi?id=71054

        Reviewed by Eric Carlson.

        * media/track/track-load-error-readyState-expected.txt: Added.
        * media/track/track-load-error-readyState.html: Added.
        * media/track/track-load-from-element-readyState-expected.txt: Added.
        * media/track/track-load-from-element-readyState.html: Added.
        * media/track/track-load-from-src-readyState-expected.txt: Added.
        * media/track/track-load-from-src-readyState.html: Added.

2011-10-28  Simon Fraser  <simon.fraser@apple.com>

        The HTML5 video element in Safari does not respect "visibility:hidden" CSS property
        https://bugs.webkit.org/show_bug.cgi?id=38829
        
        Test various configurations of compositing layers and visibility.

        Reviewed by James Robinson.

        * compositing/visibility/visibility-composited-expected.png: Added.
        * compositing/visibility/visibility-composited-transforms-expected.png: Added.
        * compositing/visibility/visibility-composited-transforms.html: Added.
        * compositing/visibility/visibility-composited.html: Added.
        * compositing/visibility/visibility-image-layers-dynamic-expected.txt: Added.
        * compositing/visibility/visibility-image-layers-dynamic.html: Added.
        * compositing/visibility/visibility-image-layers-expected.png: Added.