@@ -1,0 +1,27 @@
+Test parsing of CSS escapes.
+
+SUCCESS
+
+Rules from the stylesheet:
+
+#a127_\ { color: red; }
+#a128_ { color: red; }
+#b128_ { color: green; }
+#a159_ { color: red; }
+#b159_ { color: green; }
+#a160_  { color: red; }
+#b160_  { color: green; }
+#a384_ƀ { color: red; }
+#b384_ƀ { color: green; }
+Expected result:
+
+#a127_\ { color: red; }
+#a128_ { color: red; }
+#b128_ { color: green; }
+#a159_ { color: red; }
+#b159_ { color: green; }
+#a160_  { color: red; }
+#b160_  { color: green; }
+#a384_ƀ { color: red; }
+#b384_ƀ { color: green; }
+
