@@ -1,3 +1,13 @@
+2011-10-28  Zoltan Herczeg  <zherczeg@webkit.org>
+
+        Testing allowed identifier chars which are greater than 126
+        https://bugs.webkit.org/show_bug.cgi?id=71097
+
+        Reviewed by Darin Adler.
+
+        * fast/css/parsing-css-nonascii-expected.txt: Added.
+        * fast/css/parsing-css-nonascii.html: Added.
+
 2011-10-28  Ryosuke Niwa  <rniwa@webkit.org>
 
         Unskip tables/mozilla_expected_failures/bugs/bug14007-2.html
